--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,13 @@
-#This is just a .env file
+# Server env
  PORT = 5000
  NODE_ENV = development
- 
-#I will use postgres configuration
+ HOST_NAME = localhost
+# Database env
  DB_PORT = 3306
- DB_USERNAME = thien2001
- DB_PASSWORD = thien2001
- DB_NAME = dbtest
+ DB_USERNAME = <your-db-username>
+ DB_PASSWORD = <your-db-password>
+ DB_NAME = <your-db-name>
  DB_HOST = localhost
- DB_DIALECT = mysql #Sequelize needs to know what RDBMS we use by reading it as dialect. In this case, we use Postgres.
- 
+ DB_DIALECT = mysql 
+# Mongodb env
+ MONGO_URI = <your-mongdb-uri>
