--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.13.0",
     "mysql2": "^3.14.0",
     "sequelize": "^6.37.6",
     "sequelize-typescript": "^2.1.6",
